--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ audiotags = "0.5.0"
 glob = "0.3.3"
 rand = "0.9.2"
 rodio = "0.20.1"
-slint = "1.13.0"
+slint = { version = "1.13.0", features = ["renderer-skia"] }
 
 [build-dependencies]
-slint-build = "1.13.0"
+slint-build = { version = "1.13.0" }
+
+[dev-dependencies]
+sysinfo = "0.37.0"
