--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.3"
 edition = "2024"
 
 [dependencies]
-audiotags = "0.5.0"
 glob = "0.3.3"
 home = "0.5.11"
+lofty = "0.22.4"
 rand = "0.9.2"
 rodio = "0.21.1"
 slint = { version = "1.13.1", features = ["renderer-skia"] }
