--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ description = "A local music player built with Rodio and Slint UI"
 [dependencies]
 glob = "0.3.3"
 home = "0.5.11"
+image = "0.25.8"
 lofty = "0.22.4"
 rand = "0.9.2"
 rodio = "0.21.1"
