--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,13 @@ lofty = "0.22.4"
 rand = "0.9.2"
 rodio = "0.21.1"
 serde = { version = "1.0.223", features = ["derive"] }
-slint = { version = "1.13.1", features = ["renderer-skia"] }
+slint = { version = "1.13.1", default-features = false, features = [
+    "backend-winit",
+    "renderer-skia",
+    "accessibility",
+    "compat-1-2",
+    "std",
+] }
 toml = "0.9.5"
 
 [build-dependencies]
@@ -33,3 +39,9 @@ copyright = "Copyright © 2025 Jiadong He. All rights reserved."
 
 [package.metadata.packager.nsis]
 installer-icon = "ui/cover.ico"
+
+[profile.release]
+lto = true
+codegen-units = 1
+strip = true
+panic = "abort"
