--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ lofty = "0.22.4"
 rand = "0.9.2"
 rodio = "0.21.1"
 serde = { version = "1.0.223", features = ["derive"] }
+single-instance = "0.3.3"
 slint = { version = "1.13.1", default-features = false, features = [
     "backend-winit",
     "renderer-skia",
