--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@ authors = ["Jiadong He"]
 description = "A local music player built with Rodio and Slint UI"
 
 [dependencies]
+chrono = "0.4.42"
+env_logger = "0.11.8"
 glob = "0.3.3"
 home = "0.5.11"
 image = "0.25.8"
 lofty = "0.22.4"
+log = "0.4.28"
 rand = "0.9.2"
 rodio = "0.21.1"
 serde = { version = "1.0.223", features = ["derive"] }
