--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,11 +33,11 @@ winresource = "0.1.17"
 sysinfo = "0.37.0"
 
 [package.metadata.packager]
-product-name = "vanilla-player"
+product-name = "Zeedle"
 before-packaging-command = "cargo build --release"
 resources = ["DLLs/*.dll"]
 authors = ["Jiadong He"]
-identifier = "he.jiadong.vanilla-player"
+identifier = "he.jiadong.Zeedle"
 copyright = "Copyright © 2025 Jiadong He. All rights reserved."
 
 [package.metadata.packager.nsis]
