--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,16 +3,18 @@ name = "Zeedle"
 version = "0.1.11"
 edition = "2024"
 authors = ["Jordan Haidee"]
+description = "Music at the speed of a blink, designed for pure simplicity\nBuilt by Rodio and Slint UI"
 
 [dependencies]
 chrono = "0.4.42"
 env_logger = "0.11.8"
-glob = "0.3.3"
+globset = "0.4.16"
 home = "0.5.11"
 image = "0.25.8"
 lofty = "0.22.4"
 log = "0.4.28"
 rand = "0.9.2"
+rayon = "1.11.0"
 rodio = "0.21.1"
 serde = { version = "1.0.223", features = ["derive"] }
 single-instance = "0.3.3"
@@ -24,6 +26,7 @@ slint = { version = "1.13.1", default-features = false, features = [
     "std",
 ] }
 toml = "0.9.5"
+walkdir = "2.5.0"
 
 [build-dependencies]
 slint-build = { version = "1.13.1" }
