--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ slint = { version = "1.13.1", default-features = false, features = [
     "std",
 ] }
 toml = "0.9.5"
+unicode-width = "0.2.1"
 walkdir = "2.5.0"
 
 [build-dependencies]
