--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zeedle"
-version = "0.1.12-alpha.2"
+version = "0.1.12"
 edition = "2024"
 authors = ["Jordan Haidee"]
 description = "Music at the speed of a blink, designed for pure simplicity\nBuilt by Rodio and Slint UI"
