--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,8 +16,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Install ALSA development files
-      run: sudo apt-get update && sudo apt-get install -y libasound2-dev
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          libasound2-dev \
+          libfreetype6-dev \
+          libfontconfig1-dev \
+          pkg-config \
+          build-essential
     - name: Build
       run: cargo build --verbose
     - name: Run tests
