--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,12 +32,12 @@ jobs:
           ~/.cargo/git
           target/
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-    - name: Build
-      run: cargo build --verbose
+    - name: Build release
+      run: cargo build --release --verbose
     - name: Run tests
       run: cargo test --verbose
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: build-output
-        path: target/debug/
+        name: release-output
+        path: target/release/player 1.0  # 替换为实际可执行文件名称
